--- a/pasapalabra/src/App.css
+++ b/pasapalabra/src/App.css
@@ -8,12 +8,30 @@ body {
   align-items: flex-start;
   padding: 20px;
   color: #FFFFFF;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+.right-side{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
 }
 
 .app {
   text-align: center;
-  max-width: 800px;
-  width: 100%;
+  width: 90vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: flex-start;
+}
+.panel{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
 }
 
 /* === Header === */
@@ -123,7 +141,7 @@ body {
 
 button {
   padding: 10px 18px;
-  font-size: 15px;
+  font-size: 20px;
   border: none;
   border-radius: 6px;
   background: #FF4081;
@@ -186,7 +204,7 @@ h2 {
 .rosco-selection{
   position: absolute;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   gap: 10px;
 }
 .player-change-container{
@@ -195,6 +213,18 @@ h2 {
   justify-content: center;
   margin-bottom: 10px;
 } 
+.fast-access-keys{
+  text-align: left;
+  font-size: 1.4rem;
+  margin-top: 20px;
+  color: #ddd;
+  background-color: #004992;
+  border-radius: 8px;
+  padding: 15px;
+  max-width: fit-content;
+  list-style-type: none;
+  line-height: 1.5;
+}
 
 /*
 azul claro, aqua: #3FC1C9
