--- a/pasapalabra/src/App.css
+++ b/pasapalabra/src/App.css
@@ -200,6 +200,13 @@ h2 {
   background-color: #004992;
   border-radius: 8px;
   padding: 15px;
+  max-width: 40vw;
+}
+.advice{
+  font-size: 1.2rem;
+  margin-top: 10px;
+  color: #ffeb3b;
+  font-weight: bold;
 }
 .rosco-selection{
   position: absolute;
